--- a/css.html
+++ b/css.html
@@ -45,14 +45,52 @@
     </header>
     <main>
         <div class="full_box">
-            <div class="first_level">
-                <div class="line_one">
-                    <img src="images/_Dot.svg">
-                    <p>New feature</p>
+            <div class="box_one">
+                <div class="first_level">
+                    <div class="line_one">
+                        <img src="images/_Dot.svg">
+                        <p>New feature</p>
+                    </div>
+                    <div class="line_one_two">
+                        <p>Check out the team dashboard</p>
+                        <img src="images/arrow-right.svg">
+                    </div>
                 </div>
-                <div class="line_one_two">
-                    <p>Check out the team dashboard</p>
-                    <img src="images/arrow-right.svg">
+                <div class="line_two">
+                    <h1>Beautiful analytics to grow smarter</h1>
+                </div>
+                <div class="line_three">
+                    <p>Powerful, self-serve product and growth analytics to help you convert, engage, and retain more
+                        users. Trusted by over 4,000 startups.</p>
+                </div>
+                <div class="line_four">
+                    <button><img src="images/play-circle.svg">&nbsp; <p id="demo">Demo</p></button>
+                    <input type="button" value="Sign up" id="signup">
+                </div>
+            </div>
+            <div class="box_two">
+                <img src="images/bigpic.svg">
+            </div>
+            <div class="box_three">
+                <p id="features">Features</p>
+                <h2>Analytics that feels like its from the future</h2>
+                <p id="box_three_text">Powerful, self-serve product and growth analytics to help you convert, engage, and retain more users. Trusted by over 4,000 startups.</p>
+            </div>
+            <div class="box_four">
+                <div class="yuti_erti">
+                    <img src="images/message-chat-circle (1).svg">
+                    <h3>Share team inboxes</h3>
+                    <p>Whether you have a team of 2 or 200, our shared team inboxes keep everyone on the same page and in the loop.</p>
+                </div>
+                <div class="yuti_ori">
+                    <img src="images/zap (1).svg">
+                    <h3>Deliver instant answers</h3>
+                    <p>An all-in-one customer service platform that helps you balance everything your customers need to be happy.</p>
+                </div>
+                <div class="yuti_sami">
+                    <img src="images/chart-breakout-square (1).svg">
+                    <h3>Manage your team with reports</h3>
+                    <p>Measure what matters with Untitled’s easy-to-use reports. You can filter, export, and drilldown on the data in a couple clicks.</p>
                 </div>
             </div>
         </div>
