--- a/css.html
+++ b/css.html
@@ -74,23 +74,106 @@
             <div class="box_three">
                 <p id="features">Features</p>
                 <h2>Analytics that feels like its from the future</h2>
-                <p id="box_three_text">Powerful, self-serve product and growth analytics to help you convert, engage, and retain more users. Trusted by over 4,000 startups.</p>
+                <p id="box_three_text">Powerful, self-serve product and growth analytics to help you convert, engage,
+                    and retain more users. Trusted by over 4,000 startups.</p>
             </div>
             <div class="box_four">
                 <div class="yuti_erti">
-                    <img src="images/message-chat-circle (1).svg">
+                    <img src="images/message-chat-circle (1).svg" width="48">
                     <h3>Share team inboxes</h3>
-                    <p>Whether you have a team of 2 or 200, our shared team inboxes keep everyone on the same page and in the loop.</p>
+                    <p>Whether you have a team of 2 or 200, our shared team inboxes keep everyone on the same page and
+                        in the loop.</p>
+                </div>
+                <div class="vector">
+                    <img src="images/Vector 2.svg" height="85">
                 </div>
                 <div class="yuti_ori">
-                    <img src="images/zap (1).svg">
+                    <img src="images/zap (1).svg" width="48">
                     <h3>Deliver instant answers</h3>
-                    <p>An all-in-one customer service platform that helps you balance everything your customers need to be happy.</p>
+                    <p>An all-in-one customer service platform that helps you balance everything your customers need to
+                        be happy.</p>
+                </div>
+                <div class="vector">
+                    <img src="images/Vector 2.svg" height="85">
                 </div>
                 <div class="yuti_sami">
-                    <img src="images/chart-breakout-square (1).svg">
+                    <img src="images/chart-breakout-square (1).svg" width="48">
                     <h3>Manage your team with reports</h3>
-                    <p>Measure what matters with Untitled’s easy-to-use reports. You can filter, export, and drilldown on the data in a couple clicks.</p>
+                    <p>Measure what matters with Untitled’s easy-to-use reports. You can filter, export, and drilldown
+                        on the data in a couple clicks.</p>
+                </div>
+            </div>
+            <div class="uppertext">
+                <p id="upgrade">Upgrade</p>
+                <h3>Pricing plans that scale</h3>
+                <p>Simple, transparent pricing that grows with you. Try any plan free for 30 days.</p>
+            </div>
+            <div class="box_five">
+                <div class="cards">
+                    <div class="uppercard">
+                        <img src="images/zap.svg">
+                        <p class="purples">Basic plan</p>
+                        <h3>$10/mth</h3>
+                        <p class="greys">Billed annually.</p>
+                    </div>
+                    <div class="lowercard">
+                        <div class="lines">
+                            <img src="images/Check icon.svg">
+                            <p>Access to all basic features</p>
+                        </div>
+                        <div class="lines">
+                            <img src="images/Check icon.svg">
+                            <p>Basic reporting and analytics</p>
+                        </div>
+                        <div class="lines">
+                            <img src="images/Check icon.svg">
+                            <p>Up to 10 individual users</p>
+                        </div>
+                        <div class="lines">
+                            <img src="images/Check icon.svg">
+                            <p>20 GB individual data each user</p>
+                        </div>
+                        <div class="lines">
+                            <img src="images/Check icon.svg">
+                            <p>Basic chat and email support</p>
+                        </div>
+                    </div>
+                    <div class="buttoning">
+                    <input type="button" value="Get started" class="getstarted">
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="uppercard">
+                        <img src="images/layers-two-01.svg">
+                        <p class="purples">Business plan</p>
+                        <h3>$20/mth</h3>
+                        <p class="greys">Billed annually.</p>
+                    </div>
+                    <div class="lowercard">
+                        <div class="lines">
+                            <img src="images/Check icon.svg">
+                            <p>200+ integrations</p>
+                        </div>
+                        <div class="lines">
+                            <img src="images/Check icon.svg">
+                            <p>Advanced reporting</p>
+                        </div>
+                        <div class="lines">
+                            <img src="images/Check icon.svg">
+                            <p>Up to 20 individual users</p>
+                        </div>
+                        <div class="lines">
+                            <img src="images/Check icon.svg">
+                            <p>40 GB individual data each user</p>
+                        </div>
+                        <div class="lines">
+                            <img src="images/Check icon.svg">
+                            <p>Priority chat and email support</p>
+                        </div>
+                    </div>
+                    <div class="buttoning">
+                    <input type="button" value="Get started" class="getstarted">
+                    </div>
                 </div>
             </div>
         </div>
