--- a/css.html
+++ b/css.html
@@ -176,8 +176,55 @@
                     </div>
                 </div>
             </div>
+            <div class="last_box">
+                <div class="leftt">
+                <div class="stars">
+                    <img src="images/Star.svg">
+                    <img src="images/Star.svg">
+                    <img src="images/Star.svg">
+                    <img src="images/Star.svg">
+                    <img src="images/Star.svg">
+                </div>
+                <div class="last_text">
+                    <p>Love the simplicity of the service and the prompt customer support. We can’t imagine working without it.</p>
+                </div>
+                <div class="renee">
+                    <p>— Renee Wells</p>
+                </div>
+                <div class="last_last">
+                    <p>Product Designer, Quotient</p>
+                </div>
+                <div class="dots">
+                    <img src="images/_Pagination dot indicator.png">
+                    <img src="images/_Pagination dot indicator (1).png">
+                    <img src="images/_Pagination dot indicator (1).png">
+                </div>
+            </div>
+            <div class="rightt">
+                <img src="images/Image.svg" id="radius">
+            </div>
+            </div>
         </div>
     </main>
+    <footer>
+        <div class="full_footer">
+            <div class="left_footer">
+            <img src="images/Branding.svg">
+            <p>Branding UI</p>
+            </div>
+            <div class="mid_footer">
+                <a href="#">Overview</a>
+                <a href="#">Features</a>
+                <a href="#">Pricing</a>
+                <a href="#">Careers</a>
+                <a href="#">Help</a>
+                <a href="#">Privacy</a>
+            </div>
+            <div class="right_footer">
+                <p>© 2077 Untitled UI</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
